--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,6 @@
     <%= tag.div notice, class: "alert alert-info", data: { turbo_temporary: true } if notice %>
     <%= tag.div alert, class: "alert alert-error", data: { turbo_temporary: true } if alert %>
 
-    <%= render "shared/banner" %>
     <%= render "shared/navbar" %>
 
     <main class="container mx-auto p-5 flex-grow">
@@ -33,6 +32,7 @@
       <%= yield %>
     </main>
 
+    <%= render "shared/logo_conveyor" %>
     <%= render "shared/footer" %>
 
     <script src="//unpkg.com/alpinejs" defer></script>
