--- a/app/views/pages/shop.html.erb
+++ b/app/views/pages/shop.html.erb
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-8">
+<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
   <div class="rounded-lg shadow-sm">
     <figure>
       <%= link_to category_path("pizza-boxes") do %>
