Update product views to use product_photo
Replace .image references with .product_photo in all views.
Use .product_photo for smart fallback where appropriate.

Updated views:
- products/_product.html.erb
- products/_standard_product.html.erb
- products/_addon_carousel.html.erb
- products/_branded_configurator.html.erb
- products/_branded_configurator_modal.html.erb
- pages/home.html.erb
- organizations/products/show.html.erb
- organizations/products/_product_card.html.erb
- cart_items/_cart_item.html.erb
- shared/_drawer_cart_content.html.erb
- orders/show.html.erb
- admin/orders/show.html.erb

Part of dual photo system implementation.

--- a/app/views/products/_addon_carousel.html.erb
+++ b/app/views/products/_addon_carousel.html.erb
@@ -8,8 +8,8 @@
           <div class="swiper-slide">
             <div class="card bg-white border-2 border-gray-200 hover:border-primary transition h-full">
               <figure class="p-4">
-                <% if addon.image.attached? %>
-                  <%= image_tag addon.image.variant(resize_to_limit: [300, 300]),
+                <% if addon.product_photo.attached? %>
+                  <%= image_tag addon.product_photo.variant(resize_to_limit: [300, 300]),
                                alt: addon.name,
                                class: "w-full h-48 object-contain" %>
                 <% else %>
