--- a/app/views/organizations/products/_product_card.html.erb
+++ b/app/views/organizations/products/_product_card.html.erb
@@ -1,8 +1,8 @@
 <div class="product-card card bg-base-100 shadow-xl">
   <%= link_to organizations_product_path(product), class: "block" do %>
     <figure class="aspect-square">
-      <% if product.image.attached? %>
-        <%= image_tag product.image.variant(resize_to_limit: [400, 400]),
+      <% if product.product_photo.attached? %>
+        <%= image_tag product.product_photo.variant(resize_to_limit: [400, 400]),
                       alt: product.name,
                       class: "object-cover w-full h-full" %>
       <% else %>
