--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,8 +1,8 @@
 <div class="card shadow-sm bg-base-100">
   <figure class="max-w-[600px] max-h-[600px] bg-base-200">
     <%= link_to product_path(product), class: "w-full h-full" do %>
-      <% if product.image.attached? %>
-        <%= image_tag product.image.variant(resize_to_limit: [400, 400]), class: "w-full h-full object-cover rounded-lg", alt: product.name %>
+      <% if product.product_photo.attached? %>
+        <%= image_tag product.product_photo.variant(resize_to_limit: [400, 400]), class: "w-full h-full object-cover rounded-lg", alt: product.name %>
       <% else %>
         <div class="w-full h-[400px] lg:h-[400px] bg-gray-200 shadow-md flex items-center justify-center">
           <span class="text-gray-500">Image not available</span>
